# Mimir-Platform

./: .env.example  .env.hybrid.example  .gitignore  API_ARCHITECTURE_SUMMARY.md  API_DISPLAY_ENHANCEMENTS.md  CLA.md  COMMERCIAL_LICENSE.md  HYBRID_LINUX_DEPLOYMENT.md  IN_MEMORY_ASSIGNMENT_SYSTEM.md  MDNS_DISCOVERY_SERVICE.md  MDNS_EDGE_DISCOVERY.md  MQTT_SETUP_STATUS.md  PLUGIN_ARCHITECTURE_SPEC.md  PLUGIN_ARCHITECTURE_TODO.md  PROJECT_CHECKLIST.md  README.md  SCENE_FORM_UPDATES.md  Taskfile.yml  WINDOWS_MDNS_FIREWALL.md  build_enhanced_ui.sh  cleanup_redis_migration.py  code_cleanup.md  deploy_websocket_enhanced_api.sh  diagnose_channel_structure.sh  diagnose_permissions.sh  diagnose_redis.py  distribution_dashboard.html  docker-compose.dev.yml  docker-compose.wsl.yml  docker-compose.yml  enhanced_photo_frame_sync.sh  files.txt  fix_permissions.sh  generate_missing_thumbnails.py  install_otel_dependencies.sh  migrate_photo_frame_data.sh  migrate_redis_schema.py  mimir-api.service.example  quick_fix_oak.sh  quick_photo_frame_test.py  (+13 more)
api-service/: .env.example  DEPLOYMENT_COMPLETE.md  INTERACTIVE_DEPLOYMENT_COMPLETE.md  MODERNIZATION_COMPLETE.md  PHASE_6_COMPLETION.md  README.md  alembic.ini  app.db  base_channel.py  check_db.py  cleanup_duplicate_displays.py  content_set_manager.py  create_database.py  db_migrate.sh  deploy.sh  dev.sh  distribution_service.py  image_scheduler.py  legacy_main.py  main.py  manual_register_display.py  migrate_display_enhancements.py  migrate_display_types.py  mimir-api.docker.env  mimir-api.env.example  network_discovery_test.py  pyproject.toml  pytest.ini  redis_manager.py  requirements-test.txt  requirements.txt  rollback_display_enhancements.py  run.sh  subchannel_manager.py  test_basic.py  test_connection_pool.py  test_imports.py  test_modernization.py  verify_refactoring.py
api-service/app/: config.py  config.py.old  main.py  main_backup.py  main_fixed.py
api-service/app/api/: deps.py
api-service/app/core/: logging.py  metrics.py  metrics_old.py  metrics_simple.py  middleware.py  security.py
api-service/app/db/: base.py  models.py  session.py
api-service/app/routers/: scheduler.py
api-service/app/schemas/: channels.py  common.py  displays.py  overlays.py  scenes.py  scheduler.py
api-service/app/services/: auto_registration.py  channel_discovery.py  channel_event_consumer.py  channel_image_store.py  channel_render_shared.py  content.py  deps.py  display_image_persistence.py  display_last_image.py  distribution.py  image_swap.py  mdns_discovery.py  mqtt_presence.py  mqtt_registration.py  mqtt_scene_assignment.py  (+8 more)
api-service/deploy/: README.md
api-service/docs/: API_DOCUMENTATION.md  CHANNEL_PUSH_UPDATE_ARCHITECTURE.md  DISPLAY_CLIENT_SPECIFICATION.md  IMPLEMENTATION_STATUS_V2_1.md  NEW_CHANNEL_ARCHITECTURE.md  mimir_channels_architecture_v_2.md
mimir-plugin-sdk/: pyproject.toml
(+697 files in other folders)
