[project]
name = "api-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.30.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]
