[project]
name = "mimir-plugin-sdk"
version = "0.1.0"
description = "SDK for building Mimir channel plugins"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimir_sdk"]
